# prism-parser-py

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: example1.prism  example2.prism  example3.prism
prism_py/parser/: __init__.py  grammar.py
scripts/: incremental_check.py
